--- a/index.html
+++ b/index.html
@@ -198,30 +198,30 @@
                 <div class="ic"><i class="fa fa-briefcase"></i></div>
                 <div class="number font-alt">01</div>
                 <div class="desc">
-                  <h5 class="text-uppercase color-dark text-bold">Web Design</h5>
-                  <p class="font-alt color-dark">Google Inc</p>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                  <p class="font-alt color-dark">  1999-2001</p>
+                  <h5 class="text-uppercase color-dark text-bold">UX Designer</h5>
+                  <p class="font-alt color-dark">PointClickCare, Toronto, Canada</p>
+                  <p>My responsibility involved interaction design, user research and provide strategic design advice to the product management team.</p>
+                  <p class="font-alt color-dark">Oct, 2015 - Current</p>
                 </div>
               </li>
               <li>
                 <div class="ic"><i class="fa fa-briefcase"></i></div>
                 <div class="number font-alt">02</div>
                 <div class="desc">
-                  <h5 class="text-uppercase color-dark text-bold">Web Developer</h5>
-                  <p class="font-alt color-dark">Google Inc</p>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                  <p class="font-alt color-dark"> 1999-2001</p>
+                  <h5 class="text-uppercase color-dark text-bold">UX Designer / Engineer</h5>
+                  <p class="font-alt color-dark">Outpatient, Toronto, Canada</p>
+                  <p>One of my side projects started from a hackathon contest, my role & responsibility involved project management & product development and UX design.</p>
+                  <p class="font-alt color-dark">Oct, 2014 - Nov, 2015</p>
                 </div>
               </li>
               <li>
                 <div class="ic"><i class="fa fa-briefcase"></i></div>
                 <div class="number font-alt">03</div>
                 <div class="desc">
-                  <h5 class="text-uppercase color-dark text-bold">Digital Marketing</h5>
-                  <p class="font-alt color-dark">Google Inc</p>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                  <p class="font-alt color-dark"> 1999-2001</p>
+                  <h5 class="text-uppercase color-dark text-bold">Software Engineer, Project Lead</h5>
+                  <p class="font-alt color-dark">Huawei Technology Co., Ltd, China</p>
+                  <p>Responsible for developing a cloud computing platform and leading a small team with 5 software engineers and 3 QA. Communicating with the customer to align the requirements, drafting and revising design and implementation documents, developing API service platform with Java.</p>
+                  <p class="font-alt color-dark">Aug, 2011 - Jul, 2013</p>
                 </div>
               </li>
             </ul>
@@ -244,30 +244,22 @@
                 <div class="ic"><i class="fa fa-graduation-cap"></i></div>
                 <div class="number font-alt">01</div>
                 <div class="desc">
-                  <h5 class="text-uppercase color-dark text-bold">Computer University</h5>
-                  <p class="font-alt color-dark">Bandung</p>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                  <p class="font-alt color-dark">  1999-2001</p>
+                  <h5 class="text-uppercase color-dark text-bold">University of Toronto, Canada</h5>
+                  <p class="font-alt color-dark">Master of Information Science</p>
+                  <p><strong>Specialty:</strong> User Experience Design, HCI </p>
+                  <p><strong>Selected Courses:</strong> Information Architecture, Service Science, PD</p>
+                  <p class="font-alt color-dark">Apr, 2013 - Jun, 2015</p>
                 </div>
               </li>
               <li>
                 <div class="ic"><i class="fa fa-graduation-cap"></i></div>
                 <div class="number font-alt">02</div>
                 <div class="desc">
-                  <h5 class="text-uppercase color-dark text-bold">TELKOM University</h5>
-                  <p class="font-alt color-dark">Bandung</p>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                  <p class="font-alt color-dark"> 1999-2001</p>
-                </div>
-              </li>
-              <li>
-                <div class="ic"><i class="fa fa-graduation-cap"></i></div>
-                <div class="number font-alt">03</div>
-                <div class="desc">
-                  <h5 class="text-uppercase color-dark text-bold">Design University</h5>
-                  <p class="font-alt color-dark">Bandung</p>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                  <p class="font-alt color-dark "> 1999-2001</p>
+                  <h5 class="text-uppercase color-dark text-bold">Center South University, China</h5>
+                  <p class="font-alt color-dark">Bachelor of Computer Science</p>
+                  <p><strong>Specialty:</strong> Information Security </p>
+                  <p><strong>Selected Courses:</strong> Number Theory, Cryptography, Security Protocol</p>
+                  <p class="font-alt color-dark">Jun, 2007 - Apr, 2009</p>
                 </div>
               </li>
             </ul>
@@ -285,38 +277,95 @@
         </div>
 
         <div class="container-medium">
+          <!-- Designer SKILS -->
+          <div class="title-border">
+            <h5 class="text-uppercase color-dark no-margin text-bold ">Designer SKILLS</h5>
+          </div>  
+
+          <div class="row">
+            <div class="col-sm-6">
+              <ul class="list-unstyled list-progress">
+                <li>
+                  <div class="text-uppercase color-dark title "><span>Interaction Design - </span>  <strong>90%</strong></div>
+                  <div class="progress-line">
+                    <div class="line" data-holdwidth="90%"></div>
+                  </div>
+                </li>
+                <li>
+                  <div class="text-uppercase color-dark title">Information Architecture - <strong>85%</strong></div>
+                  <div class="progress-line">
+                    <div class="line" data-holdwidth="85%"></div>
+                  </div>
+                </li>
+                <li>
+                  <div class="text-uppercase color-dark title">User Research - <strong>80%</strong></div>
+                  <div class="progress-line">
+                    <div class="line" data-holdwidth="80%" ></div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+            <div class="col-sm-6">
+              <ul class="list-unstyled list-progress">
+                <li>
+                  <div class="text-uppercase color-dark title">Design Thinking Workshop - <strong>80%</strong></div>
+                  <div class="progress-line">
+                    <div class="line" data-holdwidth="80%" ></div>
+                  </div>
+                </li>
+                <li>
+                  <div class="text-uppercase color-dark title">Design System - <strong>85%</strong></div>
+                  <div class="progress-line">
+                    <div class="line" data-holdwidth="85%" ></div>
+                  </div>
+                </li>
+                <li>
+                  <div class="text-uppercase color-dark title">Motion Animation - <strong>65%</strong></div>
+                  <div class="progress-line">
+                    <div class="line" data-holdwidth="65%" ></div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <!-- END MORE SKILS -->
+
+          <div class="title-border">
+            <h5 class="text-uppercase color-dark no-margin text-bold ">Engineer SKILLS</h5>
+          </div>  
+
           <!--SKIL CHART TOP-->
           <ul class="skill top list-unstyled clearfix">
             <li class="col-sm-3 col-xs-6 no-padding">
               <div class="box br-right br-bottom">
-                <span class="chart" data-percent="96">
+                <span class="chart" data-percent="95">
                   <span class="percent"></span>
                 </span>
-                <div class="text-uppercase  color-dark">Php</div>
+                <div class="text-uppercase  color-dark">Android</div>
               </div>
             </li>
             <li class="col-sm-3 col-xs-6 no-padding">
               <div class="box br-right br-bottom">
-                <span class="chart" data-percent="87">
+                <span class="chart" data-percent="90">
                   <span class="percent"></span>
                 </span>
-                <div class="text-uppercase  color-dark">.NET</div>
+                <div class="text-uppercase  color-dark">Java</div>
               </div>
             </li>
             <li class="col-sm-3 col-xs-6 no-padding">
               <div class="box br-right br-bottom">
-                <span class="chart" data-percent="89">
+                <span class="chart" data-percent="85">
                   <span class="percent"></span>
                 </span>
-                <div class="text-uppercase  color-dark">MYSQL</div>
+                <div class="text-uppercase  color-dark">React</div>
               </div>
             </li>
             <li class="col-sm-3 col-xs-6 no-padding">
               <div class="box br-bottom">
-                <span class="chart" data-percent="70">
+                <span class="chart" data-percent="85">
                   <span class="percent"></span>
                 </span>
-                <div class="text-uppercase color-dark">ROR</div>
+                <div class="text-uppercase color-dark">HTML/CSS/JS</div>
               </div>
             </li>
           </ul><!--END SKIL CHART TOP-->
@@ -325,90 +374,40 @@
           <ul class="skill bottom list-unstyled clearfix">
             <li class="col-sm-3 col-xs-6 no-padding">
               <div class="box br-right">
-                <span class="chart" data-percent="60">
+                <span class="chart" data-percent="82">
                   <span class="percent"></span>
                 </span>
-                <div class="text-uppercase  color-dark">Photoshop</div>
+                <div class="text-uppercase  color-dark">MYSQL</div>
               </div>
             </li>
             <li class="col-sm-3 col-xs-6 no-padding">
               <div class="box br-right">
-                <span class="chart" data-percent="99">
+                <span class="chart" data-percent="80">
                   <span class="percent"></span>
                 </span>
-                <div class="text-uppercase  color-dark">HTML</div>
+                <div class="text-uppercase  color-dark">WordPress</div>
               </div>
             </li>
             <li class="col-sm-3 col-xs-6 no-padding">
               <div class="box br-right">
-                <span class="chart" data-percent="60">
+                <span class="chart" data-percent="78">
                   <span class="percent"></span>
                 </span>
-                <div class="text-uppercase  color-dark">CSS</div>
+                <div class="text-uppercase color-dark">PHP</div>
               </div>
             </li>
             <li class="col-sm-3 col-xs-6 no-padding">
               <div class="box">
-                <span class="chart" data-percent="77">
+                <span class="chart" data-percent="70">
                   <span class="percent"></span>
                 </span>
-                <div class="text-uppercase color-dark">BOOTSTRAP</div>
+                <div class="text-uppercase color-dark">Node JS</div>
               </div>
             </li>
           </ul><!--END SKIL CHART BOTTOM-->
 
 
-          <!-- MORE SKILS -->
-          <div class="title-border">
-            <h5 class="text-uppercase color-dark no-margin text-bold ">MORE SKILLS</h5>
-          </div>  
 
-          <div class="row">
-            <div class="col-sm-6">
-              <ul class="list-unstyled list-progress">
-                <li>
-                  <div class="text-uppercase color-dark title "><span>Creative</span>  <small>80%</small></div>
-                  <div class="progress-line">
-                    <div class="line" data-holdwidth="80%"></div>
-                  </div>
-                </li>
-                <li>
-                  <div class="text-uppercase color-dark title">Leadership   <small>60%</small></div>
-                  <div class="progress-line">
-                    <div class="line" data-holdwidth="60%"></div>
-                  </div>
-                </li>
-                <li>
-                  <div class="text-uppercase color-dark title">Communication   <small>70%</small></div>
-                  <div class="progress-line">
-                    <div class="line" data-holdwidth="70%" ></div>
-                  </div>
-                </li>
-              </ul>
-            </div>
-            <div class="col-sm-6">
-              <ul class="list-unstyled list-progress">
-                <li>
-                  <div class="text-uppercase color-dark title">English <small>80%</small></div>
-                  <div class="progress-line">
-                    <div class="line" data-holdwidth="80%" ></div>
-                  </div>
-                </li>
-                <li>
-                  <div class="text-uppercase color-dark title">Spanish  <small>60%</small></div>
-                  <div class="progress-line">
-                    <div class="line" data-holdwidth="60%" ></div>
-                  </div>
-                </li>
-                <li>
-                  <div class="text-uppercase color-dark title">Indonesia  <small>70%</small></div>
-                  <div class="progress-line">
-                    <div class="line" data-holdwidth="70%" ></div>
-                  </div>
-                </li>
-              </ul>
-            </div>
-          </div><!-- END MORE SKILS -->
           <div class="white-space-50"></div>
         </div>
 
@@ -416,7 +415,7 @@
         <div class="parallax-bg bg1" >
           <div class="container">
             <div class="padding30 text-center">
-              <a href="https://drive.google.com/file/d/1bugurB3EVGK_7VrDTxngJ0HRsCw-vtwW/view?usp=sharing" class="btn btn-flat-line btn-default light-font "><i class="fa fa-download"></i>  Download CV</a>
+              <a href="https://drive.google.com/file/d/1bugurB3EVGK_7VrDTxngJ0HRsCw-vtwW/view?usp=sharing" class="btn btn-flat-line btn-default light-font "><i class="fa fa-download"></i>  Download Resume</a>
               <!-- <span class="space-inline-15 hidden-xs"></span>
               <a href="#" class="btn btn-flat-line btn-default light-font"><i class="fa fa-print"></i> Print CV</a> -->
             </div>
