redesign upper case content

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
           </div>
           <div class="v-content">
             <div class="container">
-              <h1 class="text-uppercase color-dark name">I’m Victor Chen</h1>
-              <h4  class="text-uppercase color-dark font-alt job"><span id="typed" class="typed"></span></h4>
+              <h1 class=" color-dark name">I’m Victor Chen</h1>
+              <h4  class=" color-dark font-alt job"><span id="typed" class="typed"></span></h4>
             </div>
           </div>
         </div>
@@ -199,7 +199,7 @@
                 <div class="ic"><i class="fa fa-briefcase"></i></div>
                 <div class="number font-alt">01</div>
                 <div class="desc">
-                  <h5 class="text-uppercase color-dark text-bold">UX Designer</h5>
+                  <h5 class="color-dark text-bold">UX Designer</h5>
                   <p class="font-alt color-dark">PointClickCare, Toronto, Canada</p>
                   <p>My responsibility involved interaction design, user research and provide strategic design advice to the product management team.</p>
                   <p class="font-alt color-dark">Oct, 2015 - Current</p>
@@ -209,7 +209,7 @@
                 <div class="ic"><i class="fa fa-briefcase"></i></div>
                 <div class="number font-alt">02</div>
                 <div class="desc">
-                  <h5 class="text-uppercase color-dark text-bold">UX Designer / Engineer</h5>
+                  <h5 class=" color-dark text-bold">UX Designer / Engineer</h5>
                   <p class="font-alt color-dark">Outpatient, Toronto, Canada</p>
                   <p>One of my side projects started from a hackathon contest, my role & responsibility involved project management & product development and UX design.</p>
                   <p class="font-alt color-dark">Oct, 2014 - Nov, 2015</p>
@@ -219,7 +219,7 @@
                 <div class="ic"><i class="fa fa-briefcase"></i></div>
                 <div class="number font-alt">03</div>
                 <div class="desc">
-                  <h5 class="text-uppercase color-dark text-bold">Software Engineer, Project Lead</h5>
+                  <h5 class=" color-dark text-bold">Software Engineer, Project Lead</h5>
                   <p class="font-alt color-dark">Huawei Technology Co., Ltd, China</p>
                   <p>Responsible for developing a cloud computing platform and leading a small team with 5 software engineers and 3 QA. Communicating with the customer to align the requirements, drafting and revising design and implementation documents, developing API service platform with Java.</p>
                   <p class="font-alt color-dark">Aug, 2011 - Jul, 2013</p>
@@ -245,8 +245,8 @@
                 <div class="ic"><i class="fa fa-graduation-cap"></i></div>
                 <div class="number font-alt">01</div>
                 <div class="desc">
-                  <h5 class="text-uppercase color-dark text-bold">University of Toronto, Canada</h5>
-                  <p class="font-alt color-dark">Master of Information Science</p>
+                  <h5 class=" color-dark text-bold">Master of Information Science</h5>
+                  <p class="font-alt color-dark">University of Toronto, Canada</p>
                   <p><strong>Specialty:</strong> User Experience Design, HCI </p>
                   <p><strong>Selected Courses:</strong> Information Architecture, Service Science, PD</p>
                   <p class="font-alt color-dark">Apr, 2013 - Jun, 2015</p>
@@ -256,8 +256,8 @@
                 <div class="ic"><i class="fa fa-graduation-cap"></i></div>
                 <div class="number font-alt">02</div>
                 <div class="desc">
-                  <h5 class="text-uppercase color-dark text-bold">Center South University, China</h5>
-                  <p class="font-alt color-dark">Bachelor of Computer Science</p>
+                  <h5 class=" color-dark text-bold">Bachelor of Computer Science</h5>
+                  <p class="font-alt color-dark">Center South University, China</p>
                   <p><strong>Specialty:</strong> Information Security </p>
                   <p><strong>Selected Courses:</strong> Number Theory, Cryptography, Security Protocol</p>
                   <p class="font-alt color-dark">Jun, 2007 - Apr, 2009</p>
@@ -280,26 +280,26 @@
         <div class="container-medium">
           <!-- Designer SKILS -->
           <div class="title-border">
-            <h5 class="text-uppercase color-dark no-margin text-bold ">Designer SKILLS</h5>
+            <h5 class=" color-dark no-margin text-bold ">Designer SKILLS</h5>
           </div>  
 
           <div class="row">
             <div class="col-sm-6">
               <ul class="list-unstyled list-progress">
                 <li>
-                  <div class="text-uppercase color-dark title "><span>Interaction Design - </span>  <strong>90%</strong></div>
+                  <div class=" color-dark title "><span>Interaction Design - </span>  <strong>90%</strong></div>
                   <div class="progress-line">
                     <div class="line" data-holdwidth="90%"></div>
                   </div>
                 </li>
                 <li>
-                  <div class="text-uppercase color-dark title">Information Architecture - <strong>85%</strong></div>
+                  <div class=" color-dark title">Information Architecture - <strong>85%</strong></div>
                   <div class="progress-line">
                     <div class="line" data-holdwidth="85%"></div>
                   </div>
                 </li>
                 <li>
-                  <div class="text-uppercase color-dark title">User Research - <strong>80%</strong></div>
+                  <div class=" color-dark title">User Research - <strong>80%</strong></div>
                   <div class="progress-line">
                     <div class="line" data-holdwidth="80%" ></div>
                   </div>
@@ -309,19 +309,19 @@
             <div class="col-sm-6">
               <ul class="list-unstyled list-progress">
                 <li>
-                  <div class="text-uppercase color-dark title">Design Thinking Workshop - <strong>80%</strong></div>
+                  <div class=" color-dark title">Design Thinking Workshop - <strong>80%</strong></div>
                   <div class="progress-line">
                     <div class="line" data-holdwidth="80%" ></div>
                   </div>
                 </li>
                 <li>
-                  <div class="text-uppercase color-dark title">Design System - <strong>85%</strong></div>
+                  <div class=" color-dark title">Design System - <strong>85%</strong></div>
                   <div class="progress-line">
                     <div class="line" data-holdwidth="85%" ></div>
                   </div>
                 </li>
                 <li>
-                  <div class="text-uppercase color-dark title">Motion Animation - <strong>65%</strong></div>
+                  <div class=" color-dark title">Motion Animation - <strong>65%</strong></div>
                   <div class="progress-line">
                     <div class="line" data-holdwidth="65%" ></div>
                   </div>
