refine portfolio detail page

--- a/portfolio-detail.html
+++ b/portfolio-detail.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-    <title>WHO I AM - PERSONAL RESUME AND PORTFOLIO</title>
+    <title>Project Title - Portfolio Detail - Victor Chen Li's Online Portfolio</title>
     <!--favicon-->
     <link rel="apple-touch-icon" href="assets/theme/images/apple-touch-icon.png">
     <link rel="icon" href="assets/theme/images/favicon.ico">
@@ -45,17 +45,13 @@
     <div class="wrapper">
 
       <!-- Main Header -->
-      <header class="main-header no-window" id="home">
+      <header class="main-header" id="top">
         <div class="content-table header-content-fixed">
-          <div class="whoim">
-            <div class="box-line text-uppercase text-bold">
-              Who I Am
-            </div>
-          </div>
           <div class="v-content">
             <div class="container">
-              <h1 class="text-uppercase color-dark name">i’m Jhone doe</h1>
-              <h4  class="text-uppercase color-dark font-alt job"><span id="typed" class="typed"></span></h4>
+              <h1 class="text-uppercase color-dark name">Project Title</h1>
+              <h4  class="text-uppercase color-dark font-alt job">Branding - Identity - Graphic Design</h4>
+              <a href="#portfolio" class="move-to-next link-inpage"><i class="fa fa-4x fa-angle-double-down" ></i></a>
             </div>
           </div>
         </div>
@@ -75,30 +71,24 @@
                 </div>
                 <div class="col-md-6">
                   <ul class="breadcrumb main-nav nav">
-                    <li class=""><a href="index.html#home">Home</a></li>
-                    <li class=""><a href="index.html#about">About</a></li>
-                    <li class=""><a href="index.html#resume">Resume</a></li>
-                    <li class="active"><a href="index.html#portfolio">Portfolio</a></li>
-                    <li class=""><a href="index.html#blog">Blog</a></li>
-                    <li class=""><a href="index.html#contact" id="contact-tab">Contact</a></li>
+                    <li ><a href="index.html#home" class="link-inpage">Home</a></li>
+                    <li ><a href="index.html#about" class="link-inpage">About</a></li>
+                    <li ><a href="index.html#resume" class="link-inpage">Resume</a></li>
+                    <li class="active"><a href="index.html#portfolio" class="link-inpage">Portfolio</a></li>
+                    <!-- <li ><a href="#blog" class="link-inpage">Blog</a></li> -->
+                    <li ><a href="index.html#contact" id="contact-tab" class="link-inpage">Contact</a></li>
                   </ul>
                 </div>
                 <div class="col-md-3">
                   <ul class="breadcrumb main-nav no-space">
                     <li>
-                      <a href="#" ><i class="fa fa-facebook"></i></a>
+                      <a href="https://www.freelancer.ca/u/VictorChenLi"  ><i class="fa fa-briefcase"></i></a>
                     </li>
                     <li>
-                      <a href="#"  ><i class="fa fa-google"></i></a>
+                      <a href="https://www.linkedin.com/in/victorchenli/" ><i class="fa fa-linkedin"></i></a>
                     </li>
                     <li>
-                      <a href="#"  ><i class="fa fa-twitter"></i></a>
-                    </li>
-                    <li>
-                      <a href="#" ><i class="fa fa-linkedin"></i></a>
-                    </li>
-                    <li>
-                      <a href="#" ><i class="fa fa-github"></i></a>
+                      <a href="https://github.com/VictorChenLi/" ><i class="fa fa-github"></i></a>
                     </li>
                   </ul>
                 </div>
@@ -110,16 +100,7 @@
 
       <!-- PROJECT DETAILS-->
       <section id="portfolio" class="block-section">
-        <!-- TITLE PAGE -->
-        <div class=" shape-bottom">
-          <div class="bg-secondary block-title">
-            <div class="container">
-              <h2 class="text-uppercase color-dark text-bold no-margin">Project Title</h2>
-              <p>Branding - Identity - Graphic Design</p>
-              <div class="title-icon"> <i class="fa fa-inbox"></i> </div>
-            </div>
-          </div>
-        </div><!-- END TITLE PAGE -->
+        
 
 
         <div class="block-page" >
@@ -188,12 +169,10 @@
         </div>
 
         <!-- BG PARALLAX BTNS-->
-        <div class="parallax-bg white-light bg1">
+        <div class="parallax-bg bg1">
           <div class="container">
             <div class="padding30 text-center relative">
-              <a href="#" class="btn btn-flat-line btn-default light-font btn-xs"><i class="fa fa-angle-left"></i>  PREV PROJECT</a>
-              <span class="space-inline-15 hidden-xs"></span>
-              <a href="#" class="btn btn-flat-line btn-default light-font btn-xs">NEXT PROJECT <i class="fa fa-angle-right"></i> </a>
+              <a href="index.html#portfolio" class="btn btn-flat-line btn-default light-font btn-xs"><i class="fa fa-chevron-left"></i>  Back to Project List</a>
             </div>
           </div>
         </div><!-- END BG PARALLAX BTNS-->
@@ -206,7 +185,7 @@
             Follow Me On
           </div>
           <ul class="list-inline social-links text-center">
-            <li>
+            <!-- <li>
               <a href="#"  data-toggle="tooltip"  data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a>
             </li>
             <li>
@@ -214,18 +193,18 @@
             </li>
             <li>
               <a href="#"  data-toggle="tooltip"  data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a>
+            </li> -->
+            <li>
+              <a href="https://www.linkedin.com/in/victorchenli/"  data-toggle="tooltip"  data-placement="top" title="Linkedin"><i class="fa fa-linkedin"></i></a>
             </li>
             <li>
-              <a href="#"  data-toggle="tooltip"  data-placement="top" title="Linkedin"><i class="fa fa-linkedin"></i></a>
-            </li>
-            <li>
-              <a href="#"  data-toggle="tooltip"  data-placement="top" title="Github"><i class="fa fa-github"></i></a>
+              <a href="https://github.com/VictorChenLi/"  data-toggle="tooltip"  data-placement="top" title="Github"><i class="fa fa-github"></i></a>
             </li>
           </ul>
           <p class="text-center no-margin">
-            Solid - All Rights Reserved &COPY; 2014
+            Powered by Victor Chen
           </p>
-          <a href="#home" class="back-to-top"><i class="fa fa-angle-double-up" ></i></a>
+          <a href="#top" class="back-to-top"><i class="fa fa-angle-double-up" ></i></a>
         </div>
       </footer><!--END FOOTER-->
     </div><!--End wrapper page-->
