--- a/index.html
+++ b/index.html
@@ -90,15 +90,6 @@
                 </div>
                 <div class="col-md-3">
                   <ul class="breadcrumb main-nav no-space">
-                    <!-- <li>
-                      <a href="#" ><i class="fa fa-facebook"></i></a>
-                    </li>
-                    <li>
-                      <a href="#"  ><i class="fa fa-google"></i></a>
-                    </li>
-                    <li>
-                      <a href="#"  ><i class="fa fa-twitter"></i></a>
-                    </li> -->
                     <li>
                       <a href="https://www.freelancer.ca/u/VictorChenLi"  ><i class="fa fa-briefcase"></i></a>
                     </li>
@@ -452,7 +443,7 @@
                         <a href="assets/theme/images/portfolio/p1.png" title="pic 02" class="galery-item" ><i class="fa fa-search-plus"></i></a>
                         <a href="portfolio-detail.html"><i class="fa fa-link"></i></a>
                       </div>
-                      <a href="portfolio-detail.html" class="project-title">Project Title</a>
+                      <a href="portfolio-detail.html" class="project-title">DabbleIt</a>
                     </div>
                   </div>
                 </div>
