--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     <!-- black skin-->
     <!-- <link href="assets/theme/css/skin-black.css" rel="stylesheet"> -->
 
+    <!-- Fullstory-->
     <script>
     window['_fs_debug'] = false;
     window['_fs_host'] = 'fullstory.com';
