--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
       <!-- Main Header -->
       <header class="main-header" id="home">
         <div class="content-table header-content-fixed ">
-          <div class="whoim">
-            <div class="box-line text-uppercase text-bold">
-              Who I Am
+          <!-- <div class="whoim">
+            <div class="color-dark text-bold">
+              Hello
             </div>
-          </div>
+          </div> -->
           <div class="v-content">
             <div class="container">
               <h1 class=" color-dark name">I’m Victor Chen</h1>
